[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limbo100k"
version = "0.1.0"
description = "Fictional Limbo simulator for bankroll and risk-management experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["limbo100k*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
